# examples

./: .gitignore  README.md
AspNetCore21Serilog/: AspNetCore21Serilog.csproj  AspNetCore21Serilog.sln  ExampleEventProcessor.cs  GameService.cs  Program.cs  README.md  appsettings.json
AspNetCoreMvc/: .gitignore  GlobalSuppressions.cs  Makefile  Program.cs  Program.cs-e  README.md  Sentry.Samples.AspNetCore.Mvc.csproj  appsettings.json  deploy.ps1
AspNetCoreMvc/Controllers/: HomeController.cs
AspNetCoreMvcSerilog/: AspNetCore21Serilog.csproj  AspNetCore21Serilog.sln  IGameService.cs  Program.cs  SpecialException.cs  Startup.cs  appsettings.json
AspNetCoreMvcSerilog/Controllers/: HomeController.cs
AspNetCoreMvcSerilog/Models/: ErrorViewModel.cs
AspNetCoreMvcSerilog/Views/: _ViewImports.cshtml
AspNetMvc5Ef6/: AspNetMvc5Ef6.csproj  Global.asax.cs  README.md  Startup.cs  Web.config  packages.config
AspNetMvc5Ef6/App_Start/: BundleConfig.cs  FilterConfig.cs  IdentityConfig.cs  RouteConfig.cs  Startup.Auth.cs
AspNetOwinWebApi/: AspNetOwinWebApi.sln  README.md
android/: .gitignore  README.md  build.gradle  gradle.properties
aws-lambda/: README.md
c-sharp/: C-Sharp.sln  README.md
clojure/: README.md  project.clj
dotnet/: .gitignore  README.md
gcp-cloud-functions/: README.md
java/: pom.xml
native/qt/: CMakeLists.txt  README.md  main.cpp
node/: example.js  package.json
react-js/: package.json
react-native/: App.js  Makefile  README.md  build.gradle  index.js  sentry.properties
tunneling/: README.md  bundle.min.js  index.html
(+431 files in other folders)
